Fix Date Randomization